@@ -1,3 +1,10 @@
+2008-01-06  John Robeson <johnny@localmomentum.net>
+
+    Python 2.4 compatibility path for gettext/ngettext
+    
+    Fixes: http://bugzilla.gnome.org/show_bug.cgi?id=480508 
+    patch by Loïc Minier  
+
 2008-01-05  Josh Triplett  <josh@freedesktop.org>
 
 	* admin-tool/lockdown/lockdowncombo.py:
